fixed popup on mobile phones

--- a/src/main/resources/static/css/popup.css
+++ b/src/main/resources/static/css/popup.css
@@ -74,7 +74,7 @@
 }
 .hours{
     text-align: left;
-    padding-right: 3rem;
+    padding-right: 2.3rem;
 }
 .popup-group{
     grid-template-columns: repeat(2, 1fr);
@@ -89,6 +89,6 @@
         width: 70%;
     }
     .popup{
-        width: 85%;
+        width: 90%;
     }
 }
